--- a/banner.html
+++ b/banner.html
@@ -62,7 +62,7 @@
                             <input type="text" id="input-alt" maxlength="4" placeholder="Altura" />
                             <label for="input" class="input-label">x</label>
                             <input type="text" id="input-larg" maxlength="4" placeholder="Largura" />
-                            <label for="input" class="input-label" style="justify-content: right;">mm</label>
+                            <label for="input" class="input-label" style="justify-content: right;">cm</label>
                         </div>
 
                     </div>
