--- a/perforated-sticker.html
+++ b/perforated-sticker.html
@@ -68,7 +68,7 @@
 
                     <div class="select">
 
-                        <label for="select" class="lbl-attributes">Instalação</label>
+                        <label for="select" class="lbl-attributes">Finalidade de uso</label>
 
                         <select id="installation" class="options" onchange="showDivInstalation()">
 
@@ -137,7 +137,7 @@
 
                     <div class="content-vehicle-atributs-select">
 
-                        <label for="select" id="lbl-attributes" class="lbl-attributes"></label>
+                        <!--<label for="select" id="lbl-attributes" class="lbl-attributes"></label>-->
 
                         <div class="content-select-vehicle">
     
@@ -199,6 +199,20 @@
                             </div>
     
                         </div>
+
+                    </div>
+
+                    <div class="select">
+
+                        <label for="select" class="lbl-attributes">Aplicação</label>
+
+                        <select id="installation" class="options" onchange="showDivInstalation()">
+
+                            <option value="" hidden>- Selecione uma opção -</option>
+                            <option value="1">Pelo Cliente</option>
+                            <option value="2">Pela Empresa</option>
+
+                        </select>
 
                     </div>
 
