--- a/perforated-sticker.html
+++ b/perforated-sticker.html
@@ -70,7 +70,7 @@
 
                         <label for="select" class="lbl-attributes">Finalidade de uso</label>
 
-                        <select id="installation" class="options" onchange="showDivInstalation()">
+                        <select id="purpose-use" class="options" onchange="showDivInstalation()">
 
                             <option value="" hidden>- Selecione uma opção -</option>
                             <option value="1">Veículos</option>
@@ -195,7 +195,7 @@
                             <label for="input" class="lbl-attributes"></label>
                             
                             <div class="input-measures">
-                                <input type="text" id="input-installation" style="text-align: left;" placeholder="Ex: lojas, escritórios, residências, vitrines, etc."/>                        
+                                <input type="text" id="input-others" style="text-align: left;" placeholder="Ex: lojas, escritórios, residências, vitrines, etc."/>                        
                             </div>
     
                         </div>
@@ -206,7 +206,7 @@
 
                         <label for="select" class="lbl-attributes">Aplicação</label>
 
-                        <select id="installation" class="options" onchange="showDivInstalation()">
+                        <select id="application" class="options">
 
                             <option value="" hidden>- Selecione uma opção -</option>
                             <option value="1">Pelo Cliente</option>
