--- a/Plotting.html
+++ b/Plotting.html
@@ -168,7 +168,7 @@
                         <h2>Já tem o seu design?</h2>
 
                         <div class="info">
-                            <p>Basta fazer upload da sua arte final no formato PDF, CDR, AI ou PSD. Caso não tenha o seu design não se preocupe, a PostArt cria tudo pra você!</p>
+                            <p>Basta fazer upload da sua arte final no formato PDF, CDR, AI ou PSD, com uma resolução mínima de 300 dpi e tamanho real do adesivo. Caso não tenha o seu design, não se preocupe, a PostArt cria tudo pra você!</p>
                         </div>
 
                         <span id="fileName">Nenhum arquivo selecionado</span>
