--- a/banner.html
+++ b/banner.html
@@ -98,7 +98,7 @@
                         <h2>Já tem o seu design?</h2>
 
                         <div class="info">
-                            <p>Basta fazer upload da sua arte final no formato PDF, CDR, AI ou PSD. Caso não tenha o seu design não se preocupe, a PostArt cria tudo pra você!</p>
+                            <p>Basta fazer upload da sua arte final no formato PDF, CDR, AI ou PSD, com uma resolução mínima de 300 dpi e tamanho real do adesivo. Caso não tenha o seu design, não se preocupe, a PostArt cria tudo pra você!</p>
                         </div>
 
                         <span id="fileName">Nenhum arquivo selecionado</span>
@@ -125,7 +125,7 @@
 
         </div>
 
-        <form method="post" action="product.php">
+        <form method="#" action="#">
 
             <div class="title-description-content">
                 <h3>Contato</h3>
@@ -156,7 +156,7 @@
                 <textarea name="observation" rows="4"></textarea>
             </div>
 
-            <button type="submit" class="custom-button" onclick="validarInput()">
+            <button type="button" class="custom-button" onclick="validarInput()">
                 <p class="buttom-title">Enviar</p>
             </button>
 
