--- a/perforated-sticker.html
+++ b/perforated-sticker.html
@@ -136,7 +136,7 @@
 
                     <div class="others-content">
 
-                        <div id="others" class="input-content">
+                        <div class="input-content">
 
                             <label for="input" class="lbl-attributes"></label>
                             
