--- a/perforated-sticker.html
+++ b/perforated-sticker.html
@@ -116,7 +116,7 @@
                                 <label for="input" class="lbl-attributes">Ano</label>
                                 
                                 <div class="input-measures">
-                                    <input type="text" id="year" maxlength="4"/>                        
+                                    <input type="tel" id="year" maxlength="4"/>                        
                                 </div>
         
                             </div>
