--- a/perforated-sticker.html
+++ b/perforated-sticker.html
@@ -214,7 +214,7 @@
 
                         <div class="quantity-container">
                             <button type="button" onclick="adjust_quantity(-1)">-</button>
-                            <input type="text" id="quantity" name="quantity" value="0" oninput="handleInput(this)">
+                            <input type="tel" id="quantity" name="quantity" value="0" oninput="handleInput(this)">
                             <button type="button" onclick="adjust_quantity(1)">+</button>
                         </div>
 
