--- a/Plotting.html
+++ b/Plotting.html
@@ -88,7 +88,7 @@
                                 <label for="input" class="lbl-attributes">Ano</label>
                                 
                                 <div class="input-measures">
-                                    <input type="text" id="year" maxlength="4"/>                        
+                                    <input type="tel" id="year" maxlength="4"/>                        
                                 </div>
         
                             </div>
@@ -157,7 +157,7 @@
 
                         <div class="quantity-container">
                             <button type="button" onclick="adjust_quantity(-1)">-</button>
-                            <input type="text" id="quantity" name="quantity" value="0" oninput="handleInput(this)">
+                            <input type="tel" id="quantity" name="quantity" value="0" oninput="handleInput(this)">
                             <button type="button" onclick="adjust_quantity(1)">+</button>
                         </div>
 
