--- a/sticker.html
+++ b/sticker.html
@@ -59,9 +59,9 @@
                         <label for="input" class="lbl-attributes">Tamanho</label>
                         
                         <div class="input-measures">
-                            <input type="text" id="input-alt" maxlength="4" placeholder="Altura" />
+                            <input type="tel" id="input-alt" maxlength="4" placeholder="Altura" />
                             <label for="input" class="input-label">x</label>
-                            <input type="text" id="input-larg" maxlength="4" placeholder="Largura" />
+                            <input type="tel" id="input-larg" maxlength="4" placeholder="Largura" />
                             <label for="input" class="input-label" style="justify-content: right;">cm</label>
                         </div>
 
@@ -102,7 +102,7 @@
 
                         <div class="quantity-container">
                             <button type="button" onclick="adjust_quantity(-1)">-</button>
-                            <input type="text" id="quantity" name="quantity" value="0" oninput="handleInput(this)">
+                            <input type="tel" id="quantity" name="quantity" value="0" oninput="handleInput(this)">
                             <button type="button" onclick="adjust_quantity(1)">+</button>
                         </div>
 
