--- a/banner.html
+++ b/banner.html
@@ -132,7 +132,7 @@
                 <p>Entraremos em contato assim que possível, informaremos o valor do serviço e conograma de entrega.</p>
             </div>
 
-            <fieldset>
+            <fieldset class="form-fieldset">
 
                 <legend>Dados Pessoais</legend>
 
@@ -156,7 +156,7 @@
                 </div>
             </fieldset>
 
-            <fieldset>
+            <fieldset class="form-fieldset">
 
                 <legend>Endereço</legend>
 
