--- a/Plotting.html
+++ b/Plotting.html
@@ -202,7 +202,7 @@
                 <p>Entraremos em contato assim que possível, informaremos o valor do serviço e conograma de entrega.</p>
             </div>
 
-            <fieldset>
+            <fieldset class="form-fieldset">
 
                 <legend>Dados Pessoais</legend>
 
@@ -226,7 +226,7 @@
                 </div>
             </fieldset>
 
-            <fieldset>
+            <fieldset class="form-fieldset">
 
                 <legend>Endereço</legend>
 
