--- a/lona.html
+++ b/lona.html
@@ -147,7 +147,7 @@
                 <p>Entraremos em contato assim que possível, informaremos o valor do serviço e conograma de entrega.</p>
             </div>
 
-            <fieldset>
+            <fieldset class="form-fieldset">
 
                 <legend>Dados Pessoais</legend>
 
@@ -171,7 +171,7 @@
                 </div>
             </fieldset>
 
-            <fieldset>
+            <fieldset class="form-fieldset">
 
                 <legend>Endereço</legend>
 
