--- a/banner.html
+++ b/banner.html
@@ -120,7 +120,7 @@
 
                         <div class="alert-message-content">
                             <label for="input" class="lbl-attributes"></label>
-                            <span class="alert-message" id="quantity-alert" style="text-align: end;">teste</span>  
+                            <span class="alert-message" id="quantity-alert" style="text-align: end;"></span>  
                         </div>
 
                     </div>
