--- a/banner.html
+++ b/banner.html
@@ -50,7 +50,7 @@
                 <img src="img/banners.png" alt="Banner">
             </div>
 
-            <form class="form-product" name="form-product">
+            <form class="form-product submit-form" name="form-product">
 
                 <div class="product">
 
@@ -157,7 +157,7 @@
 
         </div>
 
-        <form method="#" action="#">
+        <form class="submit-form" method="#" action="#" onsubmit="mostrarAlertaSucesso(event)">
 
             <div class="title-description-content">
                 <h3>Contato</h3>
