--- a/banner.html
+++ b/banner.html
@@ -157,7 +157,7 @@
 
         </div>
 
-        <form class="submit-form" method="#" action="#" onsubmit="mostrarAlertaSucesso(event)">
+        <form class="submit-form" method="#" action="#">
 
             <div class="title-description-content">
                 <h3>Contato</h3>
