--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 <div class="product">
 
                     <div class="image">
-                        <img style="max-height: 160px;" alt="Adesivo Perfurado" src="img/perforated-sticker.jpeg">
+                        <img style="max-height: 160px; margin: 0px 0px 0px -10px;" alt="Adesivo Perfurado" src="img/perforated-sticker.png">
                     </div>
 
                     <p class="title">Adesivo Perfurado</p>
