--- a/perforated-sticker.html
+++ b/perforated-sticker.html
@@ -45,7 +45,7 @@
         <div id="content-product">
 
             <div class="image-product">
-                <img src="img/perforated-sticker.jpeg" alt="Vinil Personalizado">
+                <img src="img/perforated-sticker.png" alt="Vinil Personalizado">
             </div>
 
             <form class="form-product" name="form">
