--- a/index.html
+++ b/index.html
@@ -154,6 +154,24 @@
                 <div class="product">
 
                     <div class="image">
+                        <img alt="Faixa" style="height: 100px" src="img/banner-horizontal.jpg">
+                    </div>
+
+                    <p class="title">Faixa</p>
+                    <p class="subtitle">Faixa em Lona Horizontal Front Light Com Bastão E Cordinha</p>
+                    <p class="description">Produção: De 2 à 3 dias úteis</p>
+
+                    <div class="group-button">
+                        <a class="button" href="banner-horizontal.html">
+                            Orçamento
+                        </a>
+                    </div>
+
+                </div>
+
+                <div class="product">
+
+                    <div class="image">
                         <img style="max-height: 140px;" alt="Adesivo Vinil" src="img/ads-personalizado.png">
                     </div>
 
