--- a/index.html
+++ b/index.html
@@ -241,6 +241,24 @@
 
                 </div>
 
+                <div class="product">
+
+                    <div class="image">
+                        <img style="max-height: 100%;" alt="Lona BackDrop" src="img/banner-backdrop.jpg">
+                    </div>
+
+                    <p class="title">Lona Backdrop</p>
+                    <p class="subtitle">Lona personalizada para backdrop</p>
+                    <p class="description">Produção: De 2 à 3 dias úteis</p>
+
+                    <div class="group-button">
+                        <a class="button" href="banner-backdrop.html">
+                            Orçamento
+                        </a>
+                    </div>
+
+                </div>
+
             </div>
 
         </section>
