--- a/banner-backdrop.html
+++ b/banner-backdrop.html
@@ -371,9 +371,9 @@
                     <p>A lona backdrop é uma ferramenta indispensável para quem deseja criar um impacto visual significativo em eventos, campanhas publicitárias e ambientes fotográficos, entre outros. Sua versatilidade e personalização a tornam uma escolha popular para diversas aplicações.</p><br>                    
                     <p><strong>Benefícios</strong></p>
                     <ul>
-                        <li><strong>Personalização: </strong>Uma das maiores vantagens da lona backdrop é a capacidade de personalização. Ela pode ser impressa com qualquer design, desde logotipos corporativos até gráficos elaborados, atendendo às necessidades específicas de cada cliente ou evento.</li>
-                        <li><strong>Durabilidade: </strong>Feita de materiais robustos como PVC ou poliéster, a lona backdrop é resistente e durável. Isso significa que pode ser usada repetidamente, tanto em ambientes internos quanto externos, sem perder a qualidade visual.</li>
-                        <li><strong>Fácil Montagem: </strong>A montagem da lona backdrop é geralmente simples e prática. Pode ser fixada em estruturas portáteis e desmontáveis, facilitando o transporte e a instalação. Isso é especialmente útil para eventos itinerantes ou empresas que participam de várias feiras e exposições.</li>
+                        <li><strong>Personalização: </strong>uma das maiores vantagens da lona backdrop é a capacidade de personalização. Ela pode ser impressa com qualquer design, desde logotipos corporativos até gráficos elaborados, atendendo às necessidades específicas de cada cliente ou evento.</li>
+                        <li><strong>Durabilidade: </strong>feita de materiais robustos como PVC ou poliéster, a lona backdrop é resistente e durável. Isso significa que pode ser usada repetidamente, tanto em ambientes internos quanto externos, sem perder a qualidade visual.</li>
+                        <li><strong>Fácil Montagem: </strong>a montagem da lona backdrop é geralmente simples e prática. Pode ser fixada em estruturas portáteis e desmontáveis, facilitando o transporte e a instalação. Isso é especialmente útil para eventos itinerantes ou empresas que participam de várias feiras e exposições.</li>
                     </ul>
                     <p>
                         A lona backdrop é uma ferramenta versátil e essencial para criar um impacto visual duradouro em diversas aplicações. Sua capacidade de personalização, durabilidade e facilidade de montagem a tornam uma escolha popular para empresas e indivíduos que buscam destacar suas mensagens e criar ambientes visualmente atraentes. Se você está organizando um evento, lançando uma campanha publicitária ou montando um estúdio fotográfico, entre outros, a lona backdrop é uma opção que vale a pena considerar.</p>
@@ -420,9 +420,9 @@
 
                     <div class="description">
 
-                        <p><strong>Composição: </strong>A lona backdrop é feita de PVC (policloreto de vinila) ou poliéster revestido com PVC. Esse material é escolhido por sua durabilidade, resistência à água e capacidade de impressão de alta qualidade.</p>
-                        <p><strong>Espessura: </strong>A espessura da lona varia entre 280 a 440 gramas por metro quadrado (g/m²), dependendo da aplicação e da necessidade de resistência.</p>
-                        <p><strong>Acabamento: </strong>Pode ter acabamento fosco ou brilhante, conforme a preferência do cliente e as necessidades específicas do evento ou local de instalação.</p>
+                        <p><strong>Composição: </strong>a lona backdrop é feita de PVC (policloreto de vinila) ou poliéster revestido com PVC. Esse material é escolhido por sua durabilidade, resistência à água e capacidade de impressão de alta qualidade.</p>
+                        <p><strong>Espessura: </strong>a espessura da lona varia entre 280 a 440 gramas por metro quadrado (g/m²), dependendo da aplicação e da necessidade de resistência.</p>
+                        <p><strong>Acabamento: </strong>pode ter acabamento fosco ou brilhante, conforme a preferência do cliente e as necessidades específicas do evento ou local de instalação.</p>
 
                     </div>
 
@@ -444,31 +444,31 @@
 
                     <div class="description">
 
-                    <p><strong>Eventos Corporativos: </strong>A lona backdrop é ideal para criar um fundo profissional e personalizado em conferências, seminários e reuniões de negócios, reforçando a imagem corporativa e facilitando a comunicação visual.</p>
-                    <p><strong>Casamentos e Festas: </strong>Perfeita para decorar e personalizar o ambiente de casamentos e festas, proporcionando um cenário memorável para fotos e tornando os momentos ainda mais especiais.</p>
-                    <p><strong>Shows e Apresentações: </strong>Proporciona um fundo impactante e temático para palcos em shows e performances, melhorando a experiência visual do público e destacando os artistas.</p>
-                    <p><strong>Publicidade e Marketing: </strong>Essencial para destacar produtos e marcas em campanhas publicitárias e promocionais, atraindo a atenção dos consumidores e reforçando a mensagem da marca.</p>
-                    <p><strong>Exposições e Feiras: </strong>Atraí a atenção e valoriza estandes em exposições e feiras, ajudando a destacar produtos e serviços, além de criar uma identidade visual forte para a empresa.</p>
-                    <p><strong>Decoração de Ambientes: </strong>Transforma e personaliza espaços, criando ambientes temáticos e atrativos para diversos tipos de eventos, desde festas até eventos corporativos.</p>
-                    <p><strong>Sessões Fotográficas: </strong>Oferece um fundo profissional e versátil para estúdios fotográficos e sessões de fotos, permitindo a criação de cenários variados e de alta qualidade.</p>
-                    <p><strong>Esportes e Competições: </strong>Destaca patrocinadores e cria um cenário vibrante e profissional para eventos esportivos, melhorando a visibilidade das marcas e a experiência dos espectadores.</p>
-                    <p><strong>Festas Temáticas e Eventos Sociais: </strong>Personaliza festas com temas específicos, adicionando um toque especial ao ambiente e garantindo uma decoração que encanta os convidados.</p>
-                    <p><strong>Aulas e Workshops: </strong>Cria um ambiente organizado e profissional para aulas, workshops e treinamentos, facilitando a comunicação visual e a transmissão de conhecimento.</p>
-                    <p><strong>Lançamentos de Livros e Autógrafos: </strong>Proporciona um fundo temático e envolvente para eventos literários, destacando o autor e a obra, além de criar um ambiente acolhedor para os participantes.</p>
-                    <p><strong>Entrevistas e Transmissões ao Vivo: </strong>Garante um fundo limpo e profissional para entrevistas e transmissões ao vivo, melhorando a qualidade visual e a percepção do público.</p>
-                    <p><strong>Feiras de Emprego e Educação: </strong>Atrai a atenção de visitantes e cria um ambiente informativo e acolhedor em feiras de emprego e educação, destacando as oportunidades e as instituições participantes.</p>
-                    <p><strong>Pontos de Venda e Promoções: </strong>Destaca produtos e promoções em lojas e pontos de venda, atraindo clientes e aumentando as vendas através de uma comunicação visual eficaz.</p>
-                    <p><strong>Eventos Religiosos: </strong>Cria um ambiente solene e adequado para cerimônias e eventos religiosos, reforçando a espiritualidade e o significado das celebrações.</p>
-                    <p><strong>Shows de Talentos e Concursos: </strong>Proporciona um fundo temático e impactante para concursos e shows de talentos, destacando os participantes e criando um ambiente profissional.</p>
-                    <p><strong>Aniversários de Empresas: </strong>Celebra aniversários corporativos com um fundo personalizado e comemorativo, destacando a história e os valores da empresa, além de criar um ambiente festivo.</p>
-                    <p><strong>Feiras de Arte e Artesanato: </strong>Realça as obras e criações em feiras de arte e artesanato, destacando a originalidade e o talento dos artistas, além de atrair a atenção dos visitantes.</p>
-                    <p><strong>Encontros e Reuniões Familiares: </strong>Personaliza encontros familiares, criando um ambiente acolhedor e temático que valoriza a união e os momentos compartilhados entre os familiares.</p>
-                    <p><strong>Aberturas de Negócios: </strong>Marca a inauguração de novos negócios com um fundo personalizado e atrativo, destacando a nova empresa e criando uma boa primeira impressão nos clientes.</p>
-                    <p><strong>Exibições de Carros e Motos: </strong>Destaca veículos em exposições automotivas, criando um cenário envolvente que valoriza os detalhes e as características dos carros e motos em exposição.</p>
-                    <p><strong>Eventos Beneficentes e Arrecadações: </strong>Cria um ambiente acolhedor e informativo para eventos beneficentes, destacando a causa e incentivando a participação e a doação.</p>
-                    <p><strong>Espetáculos de Dança e Música: </strong>Proporciona um fundo vibrante e temático para performances de dança e música, melhorando a experiência visual e destacando os artistas.</p>
-                    <p><strong>Espaços Educacionais: </strong>Melhora a estética e a organização de espaços educacionais e centros de aprendizado, criando um ambiente mais atrativo e propício ao ensino.</p>
-                    <p><strong>Eventos ao Ar Livre: </strong>Resistente e versátil, é ideal para criar cenários em eventos ao ar livre, suportando diferentes condições climáticas e mantendo a qualidade visual.</p>
+                    <p><strong>Eventos Corporativos: </strong>a lona backdrop é ideal para criar um fundo profissional e personalizado em conferências, seminários e reuniões de negócios, reforçando a imagem corporativa e facilitando a comunicação visual.</p>
+                    <p><strong>Casamentos e Festas: </strong>perfeita para decorar e personalizar o ambiente de casamentos e festas, proporcionando um cenário memorável para fotos e tornando os momentos ainda mais especiais.</p>
+                    <p><strong>Shows e Apresentações: </strong>proporciona um fundo impactante e temático para palcos em shows e performances, melhorando a experiência visual do público e destacando os artistas.</p>
+                    <p><strong>Publicidade e Marketing: </strong>essencial para destacar produtos e marcas em campanhas publicitárias e promocionais, atraindo a atenção dos consumidores e reforçando a mensagem da marca.</p>
+                    <p><strong>Exposições e Feiras: </strong>atraí a atenção e valoriza estandes em exposições e feiras, ajudando a destacar produtos e serviços, além de criar uma identidade visual forte para a empresa.</p>
+                    <p><strong>Decoração de Ambientes: </strong>transforma e personaliza espaços, criando ambientes temáticos e atrativos para diversos tipos de eventos, desde festas até eventos corporativos.</p>
+                    <p><strong>Sessões Fotográficas: </strong>oferece um fundo profissional e versátil para estúdios fotográficos e sessões de fotos, permitindo a criação de cenários variados e de alta qualidade.</p>
+                    <p><strong>Esportes e Competições: </strong>destaca patrocinadores e cria um cenário vibrante e profissional para eventos esportivos, melhorando a visibilidade das marcas e a experiência dos espectadores.</p>
+                    <p><strong>Festas Temáticas e Eventos Sociais: </strong>personaliza festas com temas específicos, adicionando um toque especial ao ambiente e garantindo uma decoração que encanta os convidados.</p>
+                    <p><strong>Aulas e Workshops: </strong>cria um ambiente organizado e profissional para aulas, workshops e treinamentos, facilitando a comunicação visual e a transmissão de conhecimento.</p>
+                    <p><strong>Lançamentos de Livros e Autógrafos: </strong>proporciona um fundo temático e envolvente para eventos literários, destacando o autor e a obra, além de criar um ambiente acolhedor para os participantes.</p>
+                    <p><strong>Entrevistas e Transmissões ao Vivo: </strong>garante um fundo limpo e profissional para entrevistas e transmissões ao vivo, melhorando a qualidade visual e a percepção do público.</p>
+                    <p><strong>Feiras de Emprego e Educação: </strong>atrai a atenção de visitantes e cria um ambiente informativo e acolhedor em feiras de emprego e educação, destacando as oportunidades e as instituições participantes.</p>
+                    <p><strong>Pontos de Venda e Promoções: </strong>destaca produtos e promoções em lojas e pontos de venda, atraindo clientes e aumentando as vendas através de uma comunicação visual eficaz.</p>
+                    <p><strong>Eventos Religiosos: </strong>cria um ambiente solene e adequado para cerimônias e eventos religiosos, reforçando a espiritualidade e o significado das celebrações.</p>
+                    <p><strong>Shows de Talentos e Concursos: </strong>proporciona um fundo temático e impactante para concursos e shows de talentos, destacando os participantes e criando um ambiente profissional.</p>
+                    <p><strong>Aniversários de Empresas: </strong>celebra aniversários corporativos com um fundo personalizado e comemorativo, destacando a história e os valores da empresa, além de criar um ambiente festivo.</p>
+                    <p><strong>Feiras de Arte e Artesanato: </strong>realça as obras e criações em feiras de arte e artesanato, destacando a originalidade e o talento dos artistas, além de atrair a atenção dos visitantes.</p>
+                    <p><strong>Encontros e Reuniões Familiares: </strong>personaliza encontros familiares, criando um ambiente acolhedor e temático que valoriza a união e os momentos compartilhados entre os familiares.</p>
+                    <p><strong>Aberturas de Negócios: </strong>marca a inauguração de novos negócios com um fundo personalizado e atrativo, destacando a nova empresa e criando uma boa primeira impressão nos clientes.</p>
+                    <p><strong>Exibições de Carros e Motos: </strong>destaca veículos em exposições automotivas, criando um cenário envolvente que valoriza os detalhes e as características dos carros e motos em exposição.</p>
+                    <p><strong>Eventos Beneficentes e Arrecadações: </strong>cria um ambiente acolhedor e informativo para eventos beneficentes, destacando a causa e incentivando a participação e a doação.</p>
+                    <p><strong>Espetáculos de Dança e Música: </strong>proporciona um fundo vibrante e temático para performances de dança e música, melhorando a experiência visual e destacando os artistas.</p>
+                    <p><strong>Espaços Educacionais: </strong>melhora a estética e a organização de espaços educacionais e centros de aprendizado, criando um ambiente mais atrativo e propício ao ensino.</p>
+                    <p><strong>Eventos ao Ar Livre: </strong>resistente e versátil, é ideal para criar cenários em eventos ao ar livre, suportando diferentes condições climáticas e mantendo a qualidade visual.</p>
 
                     </div>
 
@@ -490,10 +490,10 @@
 
                     <div class="description">
 
-                    <p><strong>Montagem: </strong>A lona backdrop pode ser montada em estruturas metálicas ou de PVC, facilmente desmontáveis e portáteis. Pode ser fixada com ilhós e cordas, ou sistemas de velcro para uma instalação rápida e segura.</p>
-                    <p><strong>Locais: </strong>ode ser utilizada tanto em ambientes internos quanto externos, devido à sua resistência a intempéries e durabilidade.</p>
-                    <p><strong>Personalização: </strong>Impressão digital de alta resolução permite personalizar a lona com gráficos, logotipos, fotos e textos específicos para cada evento ou campanha.</p>
-                    <p><span class="attention-title">Atenção: </span><span class="attention-text">Ao aplicar a lona backdrop, é essencial seguir as instruções de montagem e instalação corretamente. Caso o cliente opte por realizar a aplicação por conta própria, a empresa não se responsabiliza por danos, falhas na instalação ou qualquer problema decorrente do mau uso do material. É altamente recomendável que a instalação seja realizada por profissionais qualificados para garantir a integridade e a eficácia do produto.</span></p>
+                    <p><strong>Montagem: </strong>a lona backdrop pode ser montada em estruturas metálicas ou de PVC, facilmente desmontáveis e portáteis. Pode ser fixada com ilhós e cordas, ou sistemas de velcro para uma instalação rápida e segura.</p>
+                    <p><strong>Locais: </strong>pode ser utilizada tanto em ambientes internos quanto externos, devido à sua resistência a intempéries e durabilidade.</p>
+                    <p><strong>Personalização: </strong>impressão digital de alta resolução permite personalizar a lona com gráficos, logotipos, fotos e textos específicos para cada evento ou campanha.</p>
+                    <p><span class="attention-title">Atenção: </span><span class="attention-text">ao aplicar a lona backdrop, é essencial seguir as instruções de montagem e instalação corretamente. Caso o cliente opte por realizar a aplicação por conta própria, a empresa não se responsabiliza por danos, falhas na instalação ou qualquer problema decorrente do mau uso do material. É altamente recomendável que a instalação seja realizada por profissionais qualificados para garantir a integridade e a eficácia do produto.</span></p>
 
                     </div>
 
@@ -515,9 +515,9 @@
 
                     <div class="description">
 
-                        <p><strong>Pedidos Personalizados: </strong>Escolha a quantidade que melhor atende às suas necessidades, seja para pequenos projetos ou grandes campanhas publicitárias.</p>
-                        <p><strong>Descontos Progressivos: </strong>Aproveite nossos preços competitivos com descontos especiais para compras em grande escala.</p>  
-                        <p><strong>Gestão de Estoque: </strong>Estoque sempre atualizado para atender pedidos de qualquer tamanho com rapidez e eficiência.</p>                                                                    
+                        <p><strong>Pedidos Personalizados: </strong>escolha a quantidade que melhor atende às suas necessidades, seja para pequenos projetos ou grandes campanhas publicitárias.</p>
+                        <p><strong>Descontos Progressivos: </strong>aproveite nossos preços competitivos com descontos especiais para compras em grande escala.</p>  
+                        <p><strong>Gestão de Estoque: </strong>estoque sempre atualizado para atender pedidos de qualquer tamanho com rapidez e eficiência.</p>                                                                    
                     
                     </div> 
 
