--- a/index.html
+++ b/index.html
@@ -259,6 +259,24 @@
 
                 </div>
 
+                <div class="product">
+
+                    <div class="image">
+                        <img style="height: 140px;" alt="Lona BackDrop" src="img/ps-board.jpeg">
+                    </div>
+
+                    <p class="title">Placa PS</p>
+                    <p class="subtitle">Placa PS personalizada 1mm / 2mm</p>
+                    <p class="description">Produção: De 2 à 3 dias úteis</p>
+
+                    <div class="group-button">
+                        <a class="button" href="ps-board.html">
+                            Orçamento
+                        </a>
+                    </div>
+
+                </div>
+
             </div>
 
         </section>
