--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
                         <img style="height: 140px;" alt="Lona BackDrop" src="img/ps-board.jpeg">
                     </div>
 
-                    <p class="title">Placa PS</p>
-                    <p class="subtitle">Placa PS personalizada 1mm / 2mm</p>
+                    <p class="title">Placa de Poliestireno (PS)</p>
+                    <p class="subtitle">Placa de Poliestireno (PS) personalizada 1mm / 2mm</p>
                     <p class="description">Produção: De 2 à 3 dias úteis</p>
 
                     <div class="group-button">
