--- a/ps-board.html
+++ b/ps-board.html
@@ -359,17 +359,9 @@
 
                     <div class="description">
 
-                        <p>As placas de Poliestireno (PS) estão disponíveis em tamanhos padrão que atendem a uma variedade de aplicações industriais e comerciais.</p><br>
-                        <p><strong>Tamanhos Padrão</strong></p>
-                        <ul>
-                            <li>1) <strong>610 mm x 915 mm </strong>(24" x 36")</li>
-                            <li>2) <strong>915 mm x 1220 mm </strong>(36" x 48")</li>
-                            <li>3) <strong>1220 mm x 2440 mm </strong>(48" x 96")</li>
-                        </ul>
-                        <p>Essas dimensões são amplamente utilizadas em sinalização, publicidade, construção e decoração devido à sua versatilidade e facilidade de manuseio.</p>
-                        <p><strong>Outras Dimensões</strong></p>
-                        <p>Além dos tamanhos padrão, as placas de PS também podem ser encontradas em dimensões personalizadas para atender a necessidades específicas de projetos. Essa customização permite que os clientes obtenham o material exatamente nas medidas necessárias, seja para pequenas maquetes detalhadas ou grandes painéis estruturais, garantindo eficiência e precisão no uso final.</p>
+                        <p>As placas de PS podem ser encontradas em dimensões personalizadas para atender a necessidades específicas de projetos. Essa customização permite que os clientes obtenham o material exatamente nas medidas necessárias, seja para pequenas maquetes detalhadas ou grandes painéis estruturais, garantindo eficiência e precisão no uso final.</p>
                         <p>Personalize o tamanho ideal para seu projeto. Insira a altura e largura desejadas em centímetros que se encaixa perfeitamente nas suas necessidades.</p>       
+                    
                     </div>
 
                 </div>
