--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 <div class="product">
 
                     <div class="image">
-                        <img style="height: 140px;" alt="Lona BackDrop" src="img/ps-board.jpeg">
+                        <img style="height: 140px;" alt="Placa de Poliestireno (PS)" src="img/ps-board.jpeg">
                     </div>
 
                     <p class="title">Placa de Poliestireno (PS)</p>
@@ -271,6 +271,24 @@
 
                     <div class="group-button">
                         <a class="button" href="ps-board.html">
+                            Orçamento
+                        </a>
+                    </div>
+
+                </div>
+
+                <div class="product">
+
+                    <div class="image">
+                        <img style="height: 190px;" alt="Placa Luminosa" src="img/luminous-sign.jpg">
+                    </div>
+
+                    <p class="title">Placa Luminosa</p>
+                    <p class="subtitle">Placa Luminosa personalizada</p>
+                    <p class="description">Produção: De 2 à 3 dias úteis</p>
+
+                    <div class="group-button">
+                        <a class="button" href="luminous-sign.html">
                             Orçamento
                         </a>
                     </div>
