--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                         <img style="height: 200px;" alt="Placa Luminosa" src="img/luminous-sign.jpg">
                     </div>
 
-                    <p class="title">Placa Luminosa</p>
+                    <p class="title">Placa Luminosa Redonda</p>
                     <p class="subtitle">Placa Luminosa personalizada</p>
                     <p class="description">Produção: De 2 à 3 dias úteis</p>
 
