--- a/index.html
+++ b/index.html
@@ -284,11 +284,29 @@
                     </div>
 
                     <p class="title">Placa Luminosa Redonda</p>
-                    <p class="subtitle">Placa Luminosa personalizada</p>
+                    <p class="subtitle">Placa Luminosa Redonda personalizada</p>
                     <p class="description">Produção: De 2 à 3 dias úteis</p>
 
                     <div class="group-button">
-                        <a class="button" href="luminous-sign.html">
+                        <a class="button" href="round-luminous-plate.html">
+                            Orçamento
+                        </a>
+                    </div>
+
+                </div>
+
+                <div class="product">
+
+                    <div class="image">
+                        <img style="height: 200px;" alt="Placa Luminosa" src="img/rectangular-luminous-banner.png">
+                    </div>
+
+                    <p class="title">Placa Luminosa Retangular</p>
+                    <p class="subtitle">Placa Luminosa Retangular personalizada</p>
+                    <p class="description">Produção: De 2 à 3 dias úteis</p>
+
+                    <div class="group-button">
+                        <a class="button" href="rectangular-luminous-plate.html">
                             Orçamento
                         </a>
                     </div>
